# spacelambda

./: .gitignore  INSTALL.md  Makefile  README.md  README_artifact.md  create-archive.sh  setup-artifact.sh  setup.sh
src/: _CoqProject  axioms.v  cloud.v  dune  interp.v  more_maps_and_sets.v  more_space_lang.v  ph.v  tied.v  triple.v  utils.v  wp.v  wp_adequacy.v  wp_adequacy_alt.v  wp_all.v  wp_alloc.v  wp_bin_op.v  wp_call.v  wp_call_prim.v  wp_closure.v  wp_enc.v  wp_load.v  wp_spec.v  wp_store.v  wpc.v  wps.v
src/examples/: README.md  dfs.v  swap.v  vector.v  vector_amortized.v  vector_tests.v
src/examples/counter/: counter.v  counter2.v
src/examples/cps/: cps_append.v  cps_fact.v
src/examples/lib/: option.v  ref.v  utils.v
src/examples/list/: iter.v  iter_clo.v  list.v  list_rev.v
src/examples/stack/: stack.v  stack_chunk.v  stack_list.v  stack_of_stacks.v  stack_of_stacks_spare.v
src/examples/tactics/: diaframe.v  tactics.v
src/fracz/: fracset.v  nfrac.v  qz.v  qz_cmra.v  smultiset.v  smultiset_cmra.v
src/language/: README.md  alt_semantics.v  closure.v  gc.v  head_semantics.v  invert_step.v  language.v  notation.v  pointers.v  reducible.v  rstore.v  semantics.v  semantics_equivalence.v  store.v  substitution.v  syntax.v
src/spacelang/: gset_fixpoint.v  hypotheses.v  iris.v  predecessors.v  rhypotheses.v  stdpp.v  successors.v
